--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,5 +21,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: docker.pkg.github.com/workfoxes/gobase
+        registry: docker.pkg.github.com
+        repository: workfoxes/gobase
         tags: latest
