--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,5 +22,5 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         registry: docker.pkg.github.com
-        repository: workfoxes/gobase
+        repository: workfoxes/gobase/gobase
         tags: latest
